--- a/app/src/main/res/layout/trip_activity_detail.xml
+++ b/app/src/main/res/layout/trip_activity_detail.xml
@@ -171,37 +171,11 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="3dp"
-                    android:fontFamily="@font/nunito_bold"
-                    android:text="Description"
-                    android:textColor="@color/darkgrey"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/trip_description"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/raleway_bold"
-                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-                    android:textColor="@color/darkgreen"
-                    android:textSize="15sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="3dp"
                     android:fontFamily="@font/nunito_bold"
-                    android:text="Locations"
+                    android:text="@string/num_of_locations"
                     android:textColor="@color/darkgrey"
                     android:textSize="15sp" />
 
