--- a/app/src/main/res/layout/location_photos_activity.xml
+++ b/app/src/main/res/layout/location_photos_activity.xml
@@ -78,7 +78,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/reviews"
+                android:id="@+id/photos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nunito_bold"
@@ -89,11 +89,11 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/no_trips"
+            android:id="@+id/no_photos"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="30dp"
-            android:text="@string/no_reviews"
+            android:text="@string/no_photos"
             android:fontFamily="@font/raleway_medium"
             android:textColor="@color/lightgrey"
             android:textStyle="italic"
@@ -103,7 +103,7 @@
             android:gravity="center_vertical"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/reviews_item"
+            android:id="@+id/photos_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
