Cleaning and added a message when there are no photos yet

--- a/app/src/main/res/layout/location_activity_detail.xml
+++ b/app/src/main/res/layout/location_activity_detail.xml
@@ -209,11 +209,26 @@
                         android:clickable="true"/>
                 </LinearLayout>
 
+                <TextView
+                    android:id="@+id/no_photos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/no_photos"
+                    android:fontFamily="@font/raleway_medium"
+                    android:textColor="@color/lightgrey"
+                    android:textStyle="italic"
+                    android:visibility="gone"
+                    android:layout_gravity="center"
+                    android:textSize="20sp" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/location_photos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:clickable="false"
+                    android:orientation="horizontal"
+                    app:reverseLayout="true"
+                    android:scrollbars = "horizontal"
                     android:layout_marginTop="10dp" />
             </LinearLayout>
 
