--- a/app/src/main/res/layout/location_reviews_activity.xml
+++ b/app/src/main/res/layout/location_reviews_activity.xml
@@ -108,11 +108,13 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:clickable="false">
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/location_reviews"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        android:clickable="false"/>
                 </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
