--- a/app/src/main/res/layout/photos_activity.xml
+++ b/app/src/main/res/layout/photos_activity.xml
@@ -31,7 +31,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/photos_list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="70dp"
         android:paddingBottom="70dp"
         app:layout_constraintTop_toTopOf="@id/photos_search_bar"
