--- a/app/src/main/res/layout/trip_activity_detail.xml
+++ b/app/src/main/res/layout/trip_activity_detail.xml
@@ -211,6 +211,20 @@
             android:textColor="@color/darkgrey"
             android:textSize="20sp"/>
 
+        <TextView
+            android:id="@+id/no_locations"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="30dp"
+            android:text="@string/no_locations"
+            android:fontFamily="@font/raleway_medium"
+            android:textColor="@color/lightgrey"
+            android:textStyle="italic"
+            android:textSize="20sp"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/trip_locations"
             android:layout_width="match_parent"
