searching, added date field to photos

--- a/app/src/main/res/layout/photo_activity_detail.xml
+++ b/app/src/main/res/layout/photo_activity_detail.xml
@@ -91,19 +91,8 @@
             android:layout_marginBottom="2dp"
             android:orientation="horizontal">
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/nunito_bold"
-                android:text="Description"
-                android:textColor="@color/darkgrey"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginLeft="10dp"
                 android:fontFamily="@font/nunito_bold"
                 android:text="Location name"
                 android:textColor="@color/darkgrey"
@@ -119,21 +108,9 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/description_detail"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/raleway_medium"
-                android:text="Lorem ir sit amet, Lorem ipsum dolor sit scing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-                android:textColor="@color/darkgreen"
-                android:textSize="18sp" />
-
-            <TextView
                 android:id="@+id/location_detail"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginLeft="10dp"
                 android:fontFamily="@font/raleway_medium"
                 android:text="Big monument in a tree"
                 android:textColor="@color/darkgreen"
