--- a/app/src/main/res/layout/photos_activity.xml
+++ b/app/src/main/res/layout/photos_activity.xml
@@ -10,7 +10,7 @@
     tools:context=".fragments.PhotosFragment">
 
     <include
-        android:id="@+id/photos_search_bar"
+        android:id="@+id/search_bar"
         layout="@layout/photos_bar_search" />
 
     <TextView
@@ -23,7 +23,7 @@
         android:textStyle="italic"
         android:textSize="30sp"
         android:visibility="gone"
-        app:layout_constraintTop_toTopOf="@id/photos_search_bar"
+        app:layout_constraintTop_toTopOf="@id/search_bar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
