--- a/app/src/main/res/layout/photos_activity.xml
+++ b/app/src/main/res/layout/photos_activity.xml
@@ -34,7 +34,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="70dp"
         android:paddingBottom="70dp"
-        app:layout_constraintTop_toTopOf="@id/photos_search_bar"
+        app:layout_constraintTop_toTopOf="@id/search_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
